--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-date-picker": "^4.2.5",
+    "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-image-picker": "^4.10.0",
     "react-native-reanimated": "^2.10.0",
